fix firefox follow icon alignment: make font-size larger

--- a/wp-content/themes/roots/assets/less/components/_buttons.less
+++ b/wp-content/themes/roots/assets/less/components/_buttons.less
@@ -13,6 +13,10 @@
 			padding: 12px 10px 7px;
 			margin-bottom: 3px;
 
+			a {
+				text-align: center;
+			}
+
 			&:hover {
 				background-color: lighten(@navbar-default-link-active-bg, 60%);
 				border: 1px solid lighten(@navbar-default-link-active-bg, 45%);
@@ -37,7 +41,12 @@
 
 		.dropdown-menu {
 			box-shadow: none;
+			font-size: 24px;
 			margin-top: 20px;
+
+			@media(@xs) {
+				font-size: 18px;
+			}
 		}
 	}
 
